// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField: renders validation error 1`] = `
<div>
  <label
    style="color: rgb(44, 44, 44); display: block; font-size: 1.35rem; font-family: 'Arial Narrow', sans-serif, sans-serif-condensed; margin-bottom: 1em;"
  >
    <div
      style="float: left; margin-bottom: 0.25em;"
    >
      Name
    </div>
    <div>
      <input
        name="name"
        style="border: 1px solid orangered; border-radius: 3px; font-family: Arial, sans-serif; font-size: 18px; padding: 0.5em; width: 13em;"
        type="text"
        value="xxx"
      />
    </div>
    <div
      class="t-field-validation-error"
      style="background-color: rgb(253, 240, 240); margin: 0px 3px; color: orangered; padding: 3px 0px; font-size: initial;"
    >
      Invalid value
    </div>
  </label>
</div>
`;

exports[`PhoneField: renders 1`] = `
<div>
  <label
    style="color: rgb(44, 44, 44); display: block; font-size: 1.35rem; font-family: 'Arial Narrow', sans-serif, sans-serif-condensed; margin-bottom: 1em;"
  >
    <div
      style="float: left; margin-bottom: 0.25em;"
    >
      Name
    </div>
    <div>
      <input
        name="name"
        style="border: 1px solid #d5d5d5; border-radius: 3px; font-family: Arial, sans-serif; font-size: 18px; padding: 0.5em; width: 13em;"
        type="tel"
        value="(02) 1234 5678"
      />
    </div>
  </label>
</div>
`;

exports[`TextField: renders 1`] = `
<div>
  <label
    style="color: rgb(44, 44, 44); display: block; font-size: 1.35rem; font-family: 'Arial Narrow', sans-serif, sans-serif-condensed; margin-bottom: 1em;"
  >
    <div
      style="float: left; margin-bottom: 0.25em;"
    >
      Name
    </div>
    <div>
      <input
        name="name"
        style="border: 1px solid #d5d5d5; border-radius: 3px; font-family: Arial, sans-serif; font-size: 18px; padding: 0.5em; width: 13em;"
        type="text"
        value="John Doe"
      />
    </div>
  </label>
</div>
`;
